# k-means-clustering

./: README.md  complexity.txt  default.nix  kmeans.cabal  kmeans.nix  profile.sh  shell.nix
app/: Main.hs
bench/: Benchmark.hs  bench.html
doc/: Makefile  refs.bib  report.tex
nix/: nixpkgs.json
profile/: Main0.hs  Main1.hs  output0.txt  profile0.prof  profile0.prof.html
src/: KMeans.hs  KMeans0.hs  KMeans1.hs  Positive.hs
src/KMeans/: Data.hs  Easy.hs  Plot.hs
