cabal-version:       >= 1.10

name:                kmeans
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        LICENSE
copyright:           2020 Arnau Abella
author:              Arnau Abella
maintainer:          arnauabella@gmail.com
tested-with:         GHC == 8.8.1
bug-reports:         https://github.com/monadplus/kmeans/issues
synopsis:            Clustering Algorithm
description:         Aims to partition n observations into k clusters in which each observation belongs to the cluster with the nearest mean (cluster centers or cluster centroid), serving as a prototype of the cluster. This results in a partitioning of the data space into Voronoi cells. It is popular for cluster analysis in data mining.
category:            Classification
extra-source-files:  README.md

source-repository head
  type:                git
  location:            https://github.com/monadplus/kmeans

Executable kmeans
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: kmeans
               , base        >=4.9      && <4.14
               , time        >=1.8.0.0  && <2.0.0.0
               , vector      >=0.12     && <0.13
  ghc-options:
               -O2
               -threaded
               -rtsopts
               -with-rtsopts=-N

Library
  default-language: Haskell2010
  build-depends:
       base           >=4.9      && <4.14
     , async          >=2.2.2    && <3.0.0
     , bytestring     >=0.10.8.2 && <0.11.0.0
     , containers     >=0.5.0.1  && <0.7
     , deepseq        >=1.4      && <1.5
     , directory      >=1.3.0.0  && <1.4.0.0
     , filepath       >=1.4.0.0  && <1.5.0.0
     , mtl            >=2.0.0.0  && <2.3
     , mwc-random     >=0.14     && <0.15
     , stm            >=2.5.0.0  && <2.6.0.0
     , text           >=1.2.3.0  && <2.0.0.0
     , time           >=1.8.0.0  && <2.0.0.0
     , vector         >=0.12     && <0.13
     , Chart          >=1.9      && <2.0
     , Chart-diagrams >=1.9      && <2.0
  exposed-modules:
     KMeans
     KMeans.Data
     KMeans.Easy
     KMeans.Plot
  other-modules:
     Positive
  default-extensions: OverloadedStrings
  hs-source-dirs: src
  ghc-options: -Wall
               -O2

Benchmark kmeans-bench
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Benchmark.hs

  build-depends:  kmeans
                , base      >=4.9      && <4.14
                , criterion >=1.5.0.0  && <2.0.0.0
  ghc-options: -Wall
               -O2

Test-suite kmeans-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends: kmeans
               , base              >=4.9      && <4.14
               , hspec             >=2.6.0    && <2.8
               , QuickCheck        >=2.12     && <2.14
  other-modules:
  ghc-options:   -Wall
                 -O2
                 -threaded
                 -rtsopts
                 -with-rtsopts=-N
